# cpp-notes

./: .gitignore  CMakeLists.txt  README.md  cmake_note.md
lib/: CMakeLists.txt
static_lib/: CMakeLists.txt  static-lib.md
static_lib/lib/: CMakeLists.txt  math.cpp  math.h
static_lib/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
